--- a/translations/kangyur/placeholders/096-007_toh758-the_practice_of_the_tantra_of_vajrasrnkhala.xml
+++ b/translations/kangyur/placeholders/096-007_toh758-the_practice_of_the_tantra_of_vajrasrnkhala.xml
@@ -11,10 +11,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryavajraśṛṅkhalatantrakalpa</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-096-007"/>
                 <date/>
             </publicationStmt>
@@ -30,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-27T08:19:13.256Z" user="admin">27/06/2023 08:19:13</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-27T08:19:08.95Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-27T08:19:08.95Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-06-30T10:53:15.166Z" user="admin">30/06/2023 10:53:15</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-27T08:19:08.95Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-27T08:19:08.95Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-06-30T10:53:10.841Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-06-30T10:53:10.841Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
