--- a/translations/kangyur/placeholders/080-012_toh428-the_sovereign_tantra_in_four_parts.xml
+++ b/translations/kangyur/placeholders/080-012_toh428-the_sovereign_tantra_in_four_parts.xml
@@ -10,8 +10,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">rnal 'byor ma'i rgyud kyi rgyal po chen po dpal gdan bzhi pa zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīcatuḥpīṭhamāha­yoginītantrarājanāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-080-012"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh428" type="text">
@@ -25,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:36:32 by admin</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:08:48.422Z" user="admin">30/06/2023 11:08:48</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:08:43.997Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:08:43.997Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
