--- a/translations/kangyur/translations/072-038_toh338-classification_of_acts.xml
+++ b/translations/kangyur/translations/072-038_toh338-classification_of_acts.xml
@@ -24,7 +24,7 @@
         <sponsor ref="eft:sponsor-206">Late Ng Ah Chon, Late Lee Tiang Chuan, Lee Cheng Watt and family, Late Lee Cheng Boon &amp; family, Lee Boon Tee &amp; family, Lee Pheck Tiang &amp; family, Lee Pheck Choo and family, Lee Siang Choo &amp; family.</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.8 <date>2023</date>
+                <edition>v 1.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -58,7 +58,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-05-15T18:21:55.017Z" user="admin">15/05/2023 18:21:55</note>
+        <note type="lastUpdated" date-time="2023-07-05T14:45:18.503Z" user="admin">05/07/2023 14:45:18</note>
         <note type="updated" update="translation-status" value="2.e" date-time="2019-08-11T07:39:21.424Z" user="john">2.e</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:12:53.765Z" user="mike">2.f</note>
@@ -102,6 +102,7 @@
           <note type="updated" update="text-version" value="1.0.6" date-time="2023-04-17T07:59:04.505Z" user="sameer">Included in App v 3.1</note>
           <note type="updated" update="text-version" value="1.0.7" date-time="2023-04-19T13:17:38.267Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
           <note type="updated" update="text-version" value="1.0.8" date-time="2023-05-15T18:21:52.151Z" user="konchog">Extensive fixes throughout the main translation.</note>
+          <note type="updated" update="text-version" value="1.0.9" date-time="2023-07-05T14:45:15.622Z" user="celso">fixed typo</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -1949,8 +1950,8 @@
                 kṛtvāha</foreign>; Kudo 2004, p. 104).</note> for the sake of his mother:</p>
           <milestone unit="chunk" xml:id="UT22084-072-038-325"/>
           <lg tid="158">
-            <l>“ ‘ “In all the countless worlds––</l>
-            <l>From the Peak of Existence downward, from the Avīci hell upward––</l>
+            <l>“ ‘ “In all the countless worlds—</l>
+            <l>From the Peak of Existence downward, from the Avīci hell upward—</l>
             <l>May the assemblies of gods, asuras, and mahoragas be happy,</l>
             <l>And may their suffering be taken on by me!”<note place="end" xml:id="UT22084-072-038-326"> According to the Tibetan. The Sanskrit differs in the
                 details: pada c also mentions “humans” (<foreign xml:lang="Sa-Ltn" type="term">nara</foreign>) beside “snakes” (<foreign xml:lang="Sa-Ltn" type="term">uraga</foreign>): <foreign xml:lang="Sa-Ltn" type="quote">ūrddhaṃ bhavāgravitatām
@@ -2026,7 +2027,7 @@
             the next.<note place="end" xml:id="UT22084-072-038-339"> According to the Tibetan. The
               Sanskrit reads slightly differently (Kudo 2004, pp. 112 and 113): <foreign xml:lang="Sa-Ltn" type="quote">yathā mayi tathā mātāpit[ṛ]ṣ[u] ācāryopādh‹y›āyeṣu
                 vacanakāriṇāṃ samo vipāka ihaloke paraloke ca</foreign> (“as for me, so for your
-              parents, preceptor, and teacher––the karmic result for one who obeys orders/those
+              parents, preceptor, and teacher—the karmic result for one who obeys orders/those
               meriting respect is the same, here in this world and in the next”). </note> How, then,
             is the karmic result the same in this very life?’ </p>
           <milestone unit="chunk" xml:id="UT22084-072-038-340"/>
@@ -2144,7 +2145,7 @@
               (1932, p. 58, n. 12) reads <foreign xml:lang="Bo-Ltn" type="quote">kha ’tshe
                 ba</foreign> (Sanskrit <foreign xml:lang="Sa-Ltn" type="term">avasanam</foreign>/<foreign xml:lang="Sa-Ltn" type="term">avaśanam</foreign> =
                 <foreign xml:lang="Sa-Ltn" type="term">avasānam</foreign>?) but does not provide a
-              translation for his edition of the Tibetan.</note>––you will benefit from this and be
+              translation for his edition of the Tibetan.</note>—you will benefit from this and be
             happy!’ or ‘Abandon us in a chasm! Commit us to the flames!’ When they say such things,
             this ought not to be done. Why not? Because through murdering one’s parents one will
             certainly <!--[831]--> go to the hell realms. Therefore, the Bhagavān has said not to
@@ -2598,7 +2599,7 @@
                 which, at this time, makes most sense to us: Offering someone a soap ball containing
                 cowhage, a plant whose hairy seed pods cause stinging and itching, seems like a
                 harmless prank at first. The action becomes more serious when considering the
-                victim/object of such an action––a pratyekabuddha. The origin or prevalence in other
+                victim/object of such an action—a pratyekabuddha. The origin or prevalence in other
                 Buddhist literature of this verse is unknown. The Tibetan seems to be in closer
                 correspondence with MS[B] (see also Lévi 1932, p. 76, n. 1). MS[A] reads <foreign xml:lang="Sa-Ltn" type="quote">karmāṇi nūnaṃ balikatarāṇi dharmeṣu
                   vajrakalpatareṣu | yatra vaśībhūtā api anubhavāmo duḥkhāni karmāṇi ||</foreign>
@@ -2973,7 +2974,7 @@
             that lead to a short lifespan; and after one has died,<note place="end" xml:id="UT22084-072-038-537"> Tibetan literally means “at the breakup of the body,
               following one’s death,” which is reminiscent of a stock phrase in Pāli and Sanskrit
               Buddhist literature meaning simply death: <foreign xml:lang="Sa-Ltn" type="quote">kāyasya bhedāt</foreign>. The expression was therefore simplified here. </note> one
-            will fall into the lower realms of existence, into evil destinies––one will be reborn in
+            will fall into the lower realms of existence, into evil destinies—one will be reborn in
             the hell realms. </p>
           <milestone unit="chunk" xml:id="UT22084-072-038-538"/>
           <p tid="235">“Regarding stealing, one should know that there are ten evil consequences.
@@ -2982,7 +2983,7 @@
             one will be abandoned by good friends; one’s ethics will be faulty; one will receive
             harm through regal punishment; one will receive harm through penalty; one will do and
             accumulate actions that lead to being bereft of one’s wealth; and after one has died,
-            one will fall into the lower realms of existence, into evil destinies––one will be
+            one will fall into the lower realms of existence, into evil destinies—one will be
             reborn in the hell realms. </p>
           <milestone unit="chunk" xml:id="UT22084-072-038-539"/>
           <p tid="236">“Regarding sexual misconduct, one should know that there are ten evil
@@ -3002,7 +3003,7 @@
               of these kinship terms is largely based on the Sanskrit equivalents given in Mvy
               (Sakaki 3681, 3910, and 3912). </note> one will do and accumulate actions that will
             lead to committing adultery and the like; and after one has died, one will fall into the
-            lower realms of existence, into evil destinies––one will be reborn in the hell realms.
+            lower realms of existence, into evil destinies—one will be reborn in the hell realms.
             <!--[846]-->
           </p>
           <milestone unit="chunk" xml:id="UT22084-072-038-545"/>
@@ -3022,7 +3023,7 @@
                 ba’i tshig tu mi ’gyur ba</foreign> might also mean that one’s own words will not be
               believed or will be incomprehensible. See also <ptr target="#UT22084-072-038-567"/> below. </note> one will
             do and accumulate the action of slandering; and after one has died, one will fall into
-            the lower realms of existence, into evil destinies––one will be reborn in the hell
+            the lower realms of existence, into evil destinies—one will be reborn in the hell
             realms. </p>
           <milestone unit="chunk" xml:id="UT22084-072-038-548"/>
           <p tid="238">“Regarding the loss of mindfulness induced by drinking beer made from
@@ -3031,8 +3032,8 @@
               8505]). Several kinds of alcoholic beverages are known from Buddhist scriptures,
               summarized in the canonical formula <foreign xml:lang="Sa-Ltn">suramaireyamadyapramādasthāna</foreign> (“the failures of mindfulness due to
               becoming inebriated by alcoholic drinks made from fermented grains and other
-              ingredients”). Alcoholic beverages were mostly produced from fermented grains––mostly
-              rice in India and barely in Tibet––but also from various fruits and sugar cane juice.
+              ingredients”). Alcoholic beverages were mostly produced from fermented grains—mostly
+              rice in India and barely in Tibet—but also from various fruits and sugar cane juice.
                 <foreign xml:lang="Sa-Ltn" type="term">Pramādasthāna</foreign> (Tibetan <foreign xml:lang="Bo-Ltn" type="term">bag med pa’i gnas</foreign>) is sometimes translated
               as “negligence” (see La Vallée Poussin/Pruden 1988–90, p. 607).</note> thirty-six evil
             consequences should be known. What are the thirty-six? In this lifetime one’s wealth
@@ -3062,7 +3063,7 @@
             ardently abandons the true Dharma; one will not want to pay attention to the experts;
             one will indolent regarding what one should be careful about; one will be far away from
             nirvāṇa; one will do and accumulate actions that lead to intoxication; and after one has
-            died, one will fall into the lower realms of existence, into evil destinies––one will be
+            died, one will fall into the lower realms of existence, into evil destinies—one will be
             reborn in the hell realms. </p>
           <milestone unit="chunk" xml:id="UT22084-072-038-553"/>
           <p tid="239">
@@ -3380,7 +3381,7 @@
                 dag</foreign>, Sanskrit <foreign xml:lang="Sa-Ltn" type="quote">(vi)śuddhalalāṭaḥ</foreign>. Perhaps a mark of beauty? According to a widespread
               and popular South Asian belief, Brahmā (or some deity) appears on the sixth day after
               a child is born to inscribe the child’s fate on its forehead. See the similar passage
-              in Toh 339 (Bruno Galasek-Hul and Lama Kunga Thartse Rinpoche 2021, <ref target="https://read.84000.co/translation/toh339.html#UT22084-072-039-420">1.86</ref>), <foreign xml:lang="Bo-Ltn" type="quote">dpral ba’i dbyes legs
+              in Toh 339 (Bruno Galasek-Hul and Lama Kunga Thartse Rinpoche 2021, <ptr target="#UT22084-072-039-420"/>), <foreign xml:lang="Bo-Ltn" type="quote">dpral ba’i dbyes legs
                 pa</foreign> (“a good-sized [i.e., broad] forehead”). A broad forehead is one of the
               eighty secondary physical characteristics of a great being or a buddha (<foreign xml:lang="Sa-Ltn" type="quote">aśīty anuvyañjanāni</foreign>). See also Jäschke
               (s.v. “dbyes”), who seems to have taken it as a general characteristic of beauty.
@@ -3802,7 +3803,7 @@
               Transliterations and Annotations of the Original Sanskrit Manuscripts from
               Nepal</title>. Bibliotheca Philologica et Philosophica Buddhica 7. Tokyo: The
             International Research Institute for Advanced Buddhology, Soka University,
-            2004.Formularende</bibl>
+            2004.</bibl>
           <bibl xml:id="UT22084-072-038-699">
                         <title xml:lang="en">
                             <ref target="http://gretil.sub.uni-goettingen.de/gretil/2_pali/1_tipit/2_sut/2_majjh/majjn1ou.htm">Majjhima-Nikaya of the Sutta-Pitaka</ref>
@@ -3917,7 +3918,7 @@
                         </title> (<title xml:lang="Sa-Ltn">Karmaśataka</title>, Toh 340). 84000:
             Translating the Words of the Buddha, 2020.</bibl>
           <bibl xml:id="UT22084-072-038-731">Karashima, Seishi. “Indian Folk Etymologies and Their
-            Reflections in Chinese Translations––<foreign xml:lang="Sa-Ltn" type="term">brāhmaṇa</foreign>, <foreign xml:lang="Sa-Ltn" type="term">śramaṇa</foreign> and
+            Reflections in Chinese Translations—<foreign xml:lang="Sa-Ltn" type="term">brāhmaṇa</foreign>, <foreign xml:lang="Sa-Ltn" type="term">śramaṇa</foreign> and
               <foreign xml:lang="Sa-Ltn" type="term">Vaiśramaṇa</foreign>.” <title xml:lang="en">Annual Report of The International Research Institute for Advanced Buddhology at Soka
               University</title> 19 (March 2016): 101–23.</bibl>
           <bibl xml:id="UT22084-072-038-732">Khenpo Könchok Gyaltsen and Trinlay Chödron, trans.
@@ -4413,17 +4414,13 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-072-038-801">
-              <term>deva</term>
-              <term xml:lang="Bo-Ltn">lha </term>
-              <term xml:lang="bo">ལྷ།</term>
-              <term xml:lang="Sa-Ltn">deva</term>
-              <term type="definition">One of the five or six classes of sentient beings,
-                specifically engendered and dominated by exaltation, indulgence, and pride.
-                According to Buddhist cosmology, the devas are said to exist in many levels of
-                celestial or divine realms, higher than that of the human realm, in the desire
-                realm, in the form realm, and in the formless realm.</term>
-            </gloss>
+                        <gloss xml:id="UT22084-072-038-801" type="term" mode="match">
+                            <term>deva</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">lha</term>
+                            <term xml:lang="bo" type="sourceAttested">ལྷ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">deva</term>
+                            <term type="definition">One of the five or six classes of sentient beings, specifically engendered and dominated by exaltation, indulgence, and pride. According to Buddhist cosmology, the devas are said to exist in many levels of celestial or divine realms, higher than that of the human realm, in the desire realm, in the form realm, and in the formless realm.</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-072-038-802">
@@ -5420,15 +5417,13 @@
                         </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-072-038-893">
-              <term>wheel-turning monarch </term>
-              <term xml:lang="Bo-Ltn">’khor los sgyur ba’i rgyal po </term>
-              <term xml:lang="bo">འཁོར་ལོས་སྒྱུར་བའི་རྒྱལ་པོ།</term>
-              <term xml:lang="Sa-Ltn">cakravartin</term>
-              <term type="definition">A king with a wheel; wherever it rolls becomes his
-                kingdom, so that he may rule over one to four continents. This is the result of the
-                merit he has accumulated in previous lifetimes.</term>
-            </gloss>
+                        <gloss xml:id="UT22084-072-038-893" type="term" mode="match">
+                            <term>wheel-turning monarch</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">’khor los sgyur ba’i rgyal po</term>
+                            <term xml:lang="bo" type="sourceAttested">འཁོར་ལོས་སྒྱུར་བའི་རྒྱལ་པོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">cakravartin</term>
+                            <term type="definition">A king with a wheel; wherever it rolls becomes his kingdom, so that he may rule over one to four continents. This is the result of the merit he has accumulated in previous lifetimes.</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-072-038-894">
