--- a/translations/kangyur/translations/063-007_toh226-the_sutra_on_transmigration_through_existences.xml
+++ b/translations/kangyur/translations/063-007_toh226-the_sutra_on_transmigration_through_existences.xml
@@ -27,7 +27,7 @@
                                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.7 <date>2022</date>
+                <edition>v 1.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -64,7 +64,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-18T15:35:55.086Z" user="celso">18/01/2023 15:35:55</note>
+                                <note type="lastUpdated" date-time="2023-07-11T17:58:05.287Z" user="admin">11/07/2023 17:58:05</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-06T14:17:51.39Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-11-24T14:29:29.208Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-24T14:29:29.208Z" user="line-tofte">Auto
@@ -106,6 +106,7 @@
                                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-10-27T13:26:07.206Z" user="line-tofte">Auto
                                         (update-contributors)</note>
                                 <note type="updated" update="translation-status" value="1" date-time="2021-11-02T16:57:54.926Z" user="mike">1</note>
+                                <note type="updated" update="translation-status" value="1.a" date-time="2021-11-02T16:57:54.926Z" user="admin">Note added retrospectively based on date of status '1'</note>
                                 <note type="updated" update="text-version" value="1.0.0" date-time="2021-11-02T16:57:54.926Z" user="mike">First published version</note>
                                 <note type="updated" update="text-version" value="1.0.1" date-time="2021-11-03T18:59:09.024Z" user="celso">activated pending link and updated bibl</note>
                                 <note type="updated" update="text-version" value="1.0.2" date-time="2021-11-14T17:08:12.86Z" user="konchog">Just added one comma, but it was an important one!</note>
@@ -114,6 +115,7 @@
                             <note type="updated" update="text-version" value="1.0.5" date-time="2022-07-26T06:57:31.413Z" user="cabie-sim">Auto (update-titles)</note>
                             <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                             <note type="updated" update="text-version" value="1.0.7" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+                            <note type="updated" update="text-version" value="1.0.8" date-time="2023-07-11T17:58:02.44Z" user="celso">Fixed bad links to Chinese Tripitika</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -773,14 +775,14 @@
                                 <div type="section" xml:id="UT22084-063-007-listBibl-2">
                                         <head type="section" tid="67">Primary Sanskrit and Chinese Sources</head>
                                         <bibl xml:id="UT22084-063-007-103">Bodhiruci, trans. <title xml:lang="zh">佛説大方等修多羅王經</title> (<title xml:lang="Zh-Ltn">fo shuo da fang deng xiu duo luo wang jing</title>; Chinese translation of
-                                                the <title xml:lang="Sa-Ltn">Bhava­saṅkrānti­sūtra</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2012/T0575.html">Taishō 575</ref>. </bibl>
-                                        <bibl xml:id="UT22084-063-007-104">Buddhaśānta, trans. <title xml:lang="zh">佛説轉有經</title> (<title xml:lang="Zh-Ltn">fo shuo zhuon you jong</title>; Chinese translation of the <title xml:lang="Sa-Ltn">Bhava­saṅkrānti­sūtra</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2012/T0576.html">Taishō 576</ref>. </bibl>
+                                                the <title xml:lang="Sa-Ltn">Bhava­saṅkrānti­sūtra</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0575.html">Taishō 575</ref>. </bibl>
+                                        <bibl xml:id="UT22084-063-007-104">Buddhaśānta, trans. <title xml:lang="zh">佛説轉有經</title> (<title xml:lang="Zh-Ltn">fo shuo zhuon you jong</title>; Chinese translation of the <title xml:lang="Sa-Ltn">Bhava­saṅkrānti­sūtra</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0576.html">Taishō 576</ref>. </bibl>
                                         <bibl xml:id="UT22084-063-007-105">Vinītā, Bhikṣunī, ed. and trans. <title xml:lang="en">A Unique Collection
                                                         of Twenty Sūtras in a Sanskrit Manuscript from the Potala</title>. Sanskrit Texts from the
                                                 Tibetan Autonomous Region 7/1. Beijing: China Tibetology Publishing House; Vienna: Austrian Academy of
                                                 Sciences Press, 2010.</bibl>
                                         <bibl xml:id="UT22084-063-007-106">Yijing, trans. <title xml:lang="zh">佛説大乘流轉諸有經</title> (<title xml:lang="Zh-Ltn">fo shuo da cheng liu zhuan zhu you jing</title>; Chinese translation of the
-                                                        <title xml:lang="Sa-Ltn">Bhava­saṅkrānti­sūtra</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2012/T0577.html">Taishō 577</ref>. </bibl>
+                                                <title xml:lang="Sa-Ltn">Bhava­saṅkrānti­sūtra</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0577.html">Taishō 577</ref>. </bibl>
                                 </div>
                                 <div type="section" xml:id="UT22084-063-007-listBibl-3">
                                         <head type="section" tid="68">Secondary Kangyur and Tengyur Texts</head>
