--- a/translations/kangyur/translations/072-003_toh303-the_sutra_on_having_moral_discipline.xml
+++ b/translations/kangyur/translations/072-003_toh303-the_sutra_on_having_moral_discipline.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2021</date>
+                <edition>v 1.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -56,7 +56,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T14:49:14.831Z" user="celso">18/01/2023 14:49:14</note>
+                <note type="lastUpdated" date-time="2023-07-11T18:11:34.959Z" user="admin">11/07/2023 18:11:34</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-06T14:18:12.867Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2021-03-24T11:19:59.425Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-24T11:19:59.425Z" user="line-tofte">Auto
@@ -93,12 +93,14 @@
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-10-27T13:27:08.237Z" user="line-tofte">Auto
                     (update-contributors)</note>
                 <note type="updated" update="translation-status" value="1" date-time="2021-11-02T17:46:50.895Z" user="mike">1</note>
+                <note type="updated" update="translation-status" value="1.a" date-time="2021-11-02T17:46:50.895Z" user="admin">Note added retrospectively based on date of status '1'</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2021-11-02T17:46:50.895Z" user="mike">First published version</note>
                 <note type="updated" update="text-version" value="1.0.1" date-time="2021-11-08T15:55:53.343Z" user="konchog">Two tiny fixes to end matter.</note>
                 <note type="updated" update="text-version" value="1.0.2" date-time="2021-11-18T10:08:43.094Z" user="andre">correction to skt entry anāthapiṇḍadasya ārāmaḥ</note>
                 <note type="updated" update="text-version" value="1.0.3" date-time="2022-06-29T16:11:13.905Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="1.0.4" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.5" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.0.6" date-time="2023-07-11T18:11:32.092Z" user="celso">Fixed bad links to Chinese Tripitika</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -435,7 +437,7 @@
                             Sanskrit Manuscript from the Potala</title>. Sanskrit Texts from the Tibetan Autonomous Region 7/1. Beijing: China
                         Tibetology Publishing House; Vienna: Austrian Academy of Sciences Press, 2010. </bibl>
                     <bibl xml:id="UT22084-072-003-59">Dānapāla, trans. <title xml:lang="zh">佛説大乘戒經</title> (<title xml:lang="Zh-Ltn">fo shuo da cheng
-                            jie jing</title>; Chinese translation of <title xml:lang="en">The Sūtra on Having Moral Discipline</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2012/T1497.html">Taishō 1497</ref>.</bibl>
+                        jie jing</title>; Chinese translation of <title xml:lang="en">The Sūtra on Having Moral Discipline</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T1497.html">Taishō 1497</ref>.</bibl>
                 </div>
                 <div type="section" xml:id="UT22084-072-003-listBibl-2">
                     <head type="section" tid="41">Secondary Literature</head>
