--- a/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -16,13 +16,14 @@
                 <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
                 <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.7 <date>2019</date>
+                <edition>v 0.1.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-091-067"/>
                 <date/>
             </publicationStmt>
@@ -47,7 +48,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-19T11:10:06.338Z" user="admin">19/06/2023 11:10:06</note>
+                <note type="lastUpdated" date-time="2023-07-18T11:49:28.981Z" user="admin">18/07/2023 11:49:28</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:09:33.919Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:09:33.919Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T09:53:08.104Z" user="line-tofte">2.h</note>
@@ -61,6 +62,9 @@
                 <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-17T09:40:22.242Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:10:02.085Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.1.7" date-time="2023-06-19T11:10:02.085Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.8" date-time="2023-06-19T11:10:43.94Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-07-18T11:49:24.683Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.1.9" date-time="2023-07-18T11:49:24.683Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
