--- a/translations/kangyur/placeholders/085-003_toh483-the_tantra_purifying_evil_destinies.xml
+++ b/translations/kangyur/placeholders/085-003_toh483-the_tantra_purifying_evil_destinies.xml
@@ -13,11 +13,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">sbyong rgyud ma/</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2021</date>
+                <edition>v 0.0.5 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-085-003"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh483" type="text">
@@ -31,11 +32,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-02-18T15:00:02.627Z" user="celso">18/02/2022 15:00:02</note>
+                <note type="lastUpdated" date-time="2023-07-18T13:29:12.53Z" user="admin">18/07/2023 13:29:12</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-17T16:21:53.674Z" user="john">0.0.1</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-01T11:55:48.129Z" user="john">Auto (update-titles)</note>
     <note type="updated" update="text-version" value="0.0.3" date-time="2021-06-01T11:57:43.411Z" user="john">0.0.3</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-06-01T12:01:16.672Z" user="john">Auto (update-titles)</note>
+    <note type="updated" update="text-version" value="0.0.4" date-time="2021-06-01T12:01:16.672Z" user="john">Auto (update-titles)</note>    <note type="updated" update="translation-status" value="4" date-time="2023-07-18T13:29:08.253Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2023-07-18T13:29:08.253Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
