--- a/translations/kangyur/placeholders/063-011_toh230-the_sutra_on_the_splendid_commitments_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/063-011_toh230-the_sutra_on_the_splendid_commitments_of_the_tathagatas.xml
@@ -11,10 +11,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">mahāsaṃnipātād mahāyānasūtrāt tathāgataśrīsamaya­nāmamahāyānasūtra</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-063-011"/>
                 <date/>
             </publicationStmt>
@@ -30,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-20T13:46:55.111Z" user="admin">20/06/2023 13:46:55</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-20T13:46:50.832Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-20T13:46:50.832Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-07-19T07:30:05.447Z" user="admin">19/07/2023 07:30:05</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-20T13:46:50.832Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-20T13:46:50.832Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-19T07:30:01.188Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-19T07:30:01.188Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
