--- a/translations/kangyur/placeholders/043-017_toh80-the_sutra_of_the_devaputra_susthitamatis_questions.xml
+++ b/translations/kangyur/placeholders/043-017_toh80-the_sutra_of_the_devaputra_susthitamatis_questions.xml
@@ -10,8 +10,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha'i bu blo gros rab gnas kyis zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasusthitamatidevaputra­paripṛcchā­nāmamahāyānasūtra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-043-017"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh80" type="text">
@@ -26,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:25:59 by admin</note>
+                <note type="lastUpdated" date-time="2023-07-19T09:21:22.65Z" user="admin">19/07/2023 09:21:22</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-19T09:21:18.346Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-07-19T09:21:18.346Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
